--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -13,3 +13,18 @@ section {
   float: right;
   padding-bottom: 50px;
 }
+
+$background-color: #0d1117;
+$strong-color: #919191;
+
+.body {
+  background: $background-color;
+}
+
+.html {
+  background: $background-color;
+}
+
+.strong {
+  color: $strong-color;
+}
