--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -18,13 +18,13 @@ $background-color: #0d1117;
 $strong-color: #919191;
 
 .body {
-  background: $background-color;
+  background: $background-color!important;
 }
 
 .html {
-  background: $background-color;
+  background: $background-color!important;
 }
 
 .strong {
-  color: $strong-color;
+  color: $strong-color!important;
 }
