--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -17,14 +17,14 @@ section {
 $background-color: #0d1117;
 $strong-color: #919191;
 
-.body {
+body {
   background: $background-color!important;
 }
 
-.html {
+html {
   background: $background-color!important;
 }
 
-.strong {
+strong {
   color: $strong-color!important;
 }
