--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,7 +7,7 @@ html, body {
   background: $dark-color!important;
 }
 
-h1, h2, h3, h4 {
+h1, h2, h3, h4, h5, h6, strong {
   color: $light-color!important;
 }
 
